Fixed stats wrapping

--- a/style/main.css
+++ b/style/main.css
@@ -319,7 +319,7 @@ html {
 	flex-wrap: wrap;
 	flex-direction: row;
 	justify-content: space-between;
-	font-size: 1.2rem;
+	font-size: 1.1rem;
 	padding-left: 1rem;
 	padding-right: 3rem;
 	box-sizing: border-box;
